//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Project "SEED 2.0" {
  database_type: 'PostgreSQL'
  Note: 'SEED 2.0'
}

Table User {
  uuid String [not null]
  id Int [pk, increment]
  name String [not null]
  email String [unique, not null]
  walletAddress Bytes [unique]
  profileImage String
  roles Role[] [not null]
  isActive Boolean [not null, default: true]
  isBlocked Boolean [not null, default: false]
  lastLoggedIn DateTime [default: `now()`]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime
  projects Project [not null]
}

Table Project {
  id Int [pk, increment]
  uuid String [unique, not null]
  name String [not null]
  budget Float [not null]
  tokenName String [not null]
  tokenQuantity Float [not null]
  tokenSymbol String [not null]
  rwaRepresentation String [not null]
  description String [not null]
  userId Int [not null]
  contractAddress String [not null]
  user User [not null]
  vendors Vendor [not null]
  beneficiaries Beneficiary [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime
}

Table Vendor {
  id Int [pk, increment]
  uuid String [unique, not null]
  name String [not null]
  walletAddress String [unique, not null]
  location Json
  email String [not null]
  projectUUID String [not null]
  project Project [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime
}

Table Beneficiary {
  id Int [pk, increment]
  uuid String [unique, not null]
  name String [not null]
  walletAddress String [unique, not null]
  email String
  gender String [not null]
  age Int [not null]
  latitude Float [not null]
  longitude Float [not null]
  projectUUID String [not null]
  project Project [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime
}

Enum Role {
  ADMIN
  USER
}

Ref: Project.userId > User.id

Ref: Vendor.projectUUID > Project.uuid

Ref: Beneficiary.projectUUID > Project.uuid